// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (--url-rule-doc) basic uses the right URLs 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                            | Description             | ❌  |
| :---------------------------------------------- | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/no-bar/) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/no-foo/) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) basic uses the right URLs 2`] = `
"# Description for no-foo (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](https://example.com/rule-docs/no-bar/).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) basic uses the right URLs 3`] = `
"# Description for no-bar (\`test/no-bar\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function returns undefined should fallback to the normal URL 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description             | ❌  |
| :----------------------------- | :---------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description for no-bar. |    |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) function returns undefined should fallback to the normal URL 2`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                              | Description             | ❌  |
| :-------------------------------- | :---------------------- | :- |
| [no-bar](../docs/rules/no-bar.md) | Description for no-bar. |    |
| [no-foo](../docs/rules/no-foo.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) function returns undefined should fallback to the normal URL 3`] = `
"# Description for no-foo (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function returns undefined should fallback to the normal URL 4`] = `
"# Description for no-bar (\`test/no-bar\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function uses the custom URL 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                                               | Description             | ❌  |
| :----------------------------------------------------------------- | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/name:no-bar/path:README.md) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/name:no-foo/path:README.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) function uses the custom URL 2`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                                                      | Description             | ❌  |
| :------------------------------------------------------------------------ | :---------------------- | :- |
| [no-bar](https://example.com/rule-docs/name:no-bar/path:nested/README.md) | Description for no-bar. |    |
| [no-foo](https://example.com/rule-docs/name:no-foo/path:nested/README.md) | Description for no-foo. | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--url-rule-doc) function uses the custom URL 3`] = `
"# Description for no-foo (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](https://example.com/rule-docs/name:no-bar/path:docs/rules/no-foo.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--url-rule-doc) function uses the custom URL 4`] = `
"# Description for no-bar (\`test/no-bar\`)

<!-- end auto-generated rule header -->
"
`;
